--- a/configs/apache2.conf
+++ b/configs/apache2.conf
@@ -151,24 +151,19 @@ Include ports.conf
 # your system is serving content from a sub-directory in /srv you must allow
 # access here, or in any related virtual host.
 <Directory />
-    Order Deny,Allow
-    Deny from all
     Options None
     AllowOverride None
 </Directory>
 
 <Directory /usr/share>
-    Order Deny,Allow
-    Deny from all
     Options None
     AllowOverride None
 </Directory>
 
 <Directory /var/www/>
-    Order Deny,Allow
-    Deny from all
-    Options None
+    Options -Indexes -FollowSymLinks -ExecCGI -Includes
     AllowOverride None
+    Require all granted
 </Directory>
 
 #<Directory /srv/>
@@ -176,9 +171,6 @@ Include ports.conf
 #	AllowOverride None
 #	Require all granted
 #</Directory>
-
-
-
 
 # AccessFileName: The name of the file to look for in each directory
 # for additional configuration directives.  See also the AllowOverride
